<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="12dp"
    android:orientation="vertical"
    tools:context="io.github.sidvenu.atyourage.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/app_name"
        android:textColor="@color/title"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/born_on"
        android:textColor="@color/subtitle"
        android:textSize="9.69946359sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:baselineAligned="true">

        <TextView
            android:id="@+id/born_on_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/helvetica_bold"
            android:textColor="@color/black"
            android:textSize="24.248659sp"
            tools:text="September 15, 2000" />

        <TextView
            android:id="@+id/change_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/born_on_text_view"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/helvetica_bold"
            android:gravity="end"
            android:text="@string/change"
            android:textColor="@color/changeColor"
            android:textSize="9.69946359sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/result_view_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/age"
                android:textColor="@color/subtitle"
                android:textSize="9.69946359sp" />

            <TextView
                android:id="@+id/age_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/helvetica_bold"
                android:textColor="@color/black"
                android:textSize="24.248659sp"
                tools:text="17 years, 4 months, and 26 days" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/at_your_age"
                android:textColor="@color/subtitle"
                android:textSize="9.69946359sp" />

            <ListView
                android:id="@+id/results_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:scrollbarStyle="outsideOverlay" />
        </LinearLayout>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/material_progress_bar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:paddingBottom="50dp"
            app:mpb_progressStyle="horizontal" />

        <LinearLayout
            android:id="@+id/error_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/internet_connection_problem"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/refresh_view"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/refresh"
                android:src="@drawable/refresh" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
